--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -6,161 +6,21 @@
 }
 
 html {
-    font: normal 16px roboto;
+    font: normal 16px "Roboto", sans-serif;
     color: #555;
 }
 
 nav,ul {
     list-style: none;
 }
-/* #hamburger {
-    position: fixed;
-    z-index: 20;
-    top: 4rem;
-    right: 4rem;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-  }
-  
-  #hamburger .menu_left {
-    padding: 0 2rem;
-    -webkit-transform: scaleX(0) translateX(1.5rem);
-            transform: scaleX(0) translateX(1.5rem);
-    -webkit-transition: all 0.1s;
-    transition: all 0.1s;
-    -webkit-transform-origin: 110% 0%;
-            transform-origin: 110% 0%;
-    border-top-left-radius: 20px;
-    border-bottom-left-radius: 20px;
-    background: #ffffff;
-  }
-  
-  #hamburger .menu_right {
-    padding: 0 2rem;
-    -webkit-transform: scaleX(0) translateX(-1.5rem);
-            transform: scaleX(0) translateX(-1.5rem);
-    -webkit-transition: all 0.1s;
-    transition: all 0.1s;
-    -webkit-transform-origin: 0% 100%;
-            transform-origin: 0% 100%;
-    border-top-right-radius: 20px;
-    border-bottom-right-radius: 20px;
-    background: #ffffff;
-  }
-  
-  #hamburger .nav_wrapper {
-    border-radius: 50%;
-    -webkit-box-shadow: 0px 0px 15px -8px rgba(0, 0, 0, 0.6);
-            box-shadow: 0px 0px 15px -8px rgba(0, 0, 0, 0.6);
-    padding: 15px;
-    height: 30px;
-    width: 30px;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    background: #fff;
-    position: relative;
-    z-index: 2;
-    cursor: pointer;
-    -webkit-transform: translateX(20rem);
-            transform: translateX(20rem);
-    -webkit-transition: all 0.5s;
-    transition: all 0.5s;
-  }
-  
-  #hamburger .nav_wrapper .nav {
-    position: static;
-    height: 3px;
-    margin: 3px 0;
-    width: 30px;
-    border-radius: 5px;
-    background: #2b2b2b;
-    -webkit-transition: all 0.3s ease-out;
-    transition: all 0.3s ease-out;
-  }
-  
-  #hamburger .nav_wrapper .nav:nth-child(2) {
-    width: 25px;
-  }
-  
-  #hamburger ul {
-    padding: 0;
-    list-style: none;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-  }
-  
-  #hamburger ul a {
-    margin: 0 1rem;
-    opacity: 0;
-    -webkit-transition: opacity 0.3s 0.2s;
-    transition: opacity 0.3s 0.2s;
-    font-size: 2rem;
-  }
-  
-  #menu_check {
-    display: none;
-  }
-  
-  #menu_check:checked ~ #menu {
-    right: 0;
-  }
-  
-  #menu_check:checked ~ #hamburger .menu_left {
-    -webkit-transform: scaleX(1) translateX(1.5rem);
-            transform: scaleX(1) translateX(1.5rem);
-    -webkit-box-shadow: 0px 0px 15px -8px rgba(0, 0, 0, 0.6);
-            box-shadow: 0px 0px 15px -8px rgba(0, 0, 0, 0.6);
-  }
-  
-  #menu_check:checked ~ #hamburger .menu_right {
-    -webkit-transform: scaleX(1) translateX(-1.5rem);
-            transform: scaleX(1) translateX(-1.5rem);
-    -webkit-box-shadow: 0px 0px 15px -8px rgba(0, 0, 0, 0.6);
-            box-shadow: 0px 0px 15px -8px rgba(0, 0, 0, 0.6);
-  }
-  
-  #menu_check:checked ~ #hamburger a {
-    opacity: 1;
-  }
-  
-  #menu_check:checked ~ #hamburger .nav_wrapper {
-    -webkit-transform: translateX(0) rotate(360deg);
-            transform: translateX(0) rotate(360deg);
-  }
-  
-  #menu_check:checked ~ #hamburger .nav:nth-child(1) {
-    -webkit-transform: rotate(45deg) translate(5px, 5px);
-            transform: rotate(45deg) translate(5px, 5px);
-  }
-  
-  #menu_check:checked ~ #hamburger .nav:nth-child(2) {
-    opacity: 0;
-  }
-  
-  #menu_check:checked ~ #hamburger .nav:nth-child(3) {
-    -webkit-transform: rotate(-45deg) translate(6px, -8px);
-            transform: rotate(-45deg) translate(6px, -8px);
-  } */
 
 a {
     text-decoration : none;
     opacity: 0.75;
     color: #ffffff;
+    cursor: pointer;
 }
-a:hover {
+.hero-content a:hover {
     opacity: 1;
 }
 
@@ -169,27 +29,135 @@ a.btn {
     text-transform: uppercase;
     font-weight: bold;
     text-align: center; 
-    background-image: linear-gradient(120deg, #89f7fe 0%, #66a6ff 100%);
+    background-image: linear-gradient(to right bottom, rgba(155, 245, 139, 0.8), rgba(45, 223, 163, 0.8));
     opacity: 1;
 }
-.btn--animated {
-    animation: bottom 500ms ease-out 750ms;
-    animation-fill-mode: backwards;
+
+.nav-links li a {
+    cursor: pointer;
+    pointer-events: auto;
 }
-.btn:hover {
-    transform: translateY(-0.3rem);
-    box-shadow: 0 1rem 2rem rgba(207, 207, 207, 0.829); 
+/* hamburger */
+.burger {
+    display: none;
+    cursor: pointer;
+}
+
+.burger div {
+    width: 28px;
+    height: 4px;
+    background-color: rgb(226, 226, 226);
+    margin: 5px;
+    transition: all 0.3s ease;
+}
+@media screen and (max-width: 1024px) {
+    .nav-links{
+        width: 60%;
     }
-    .btn:hover::after {
-      transform: scalex(1.4) scaley(1.6);
-      opacity: 0; }
-  
-  .btn:focus, .btn:active {
-    outline: none;
-    transform: translateY(-0.1rem);
-    box-shadow: 0 0.5rem 1rem rgba(255, 241, 241, 0.2); 
 }
-  
+@media screen and (max-width: 768px) {
+    body {
+        overflow-x: hidden;
+    }
+    h2 {
+        display: none;
+    }
+    .logo {
+        margin-right: auto;
+    }
+    .nav-links {
+        position: absolute;
+        right: 0px;
+        height: 100vh;
+        top: 0;
+        background-color: #5D4954;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        width:50%;
+        transform: translateX(100%);
+    }
+    .nav-links li {
+        opacity: 0;
+    }
+    .burger{
+        display: block;
+        margin-top: -60px;
+        margin-left: auto;
+    }
+}
+.nav-active{
+    transform: translateX(0%);
+    transition: transform 0.5s ease-in;
+}
+
+@keyframes navLinkFade{
+    from{
+        opacity: 0;
+        transform: translateX(50px);
+    }
+    to{
+        opacity: 1;
+        transform: translateX(0px);
+    }
+
+}
+ /* .toggle .line1 {
+    transform: rotate(-45deg ) translate(-5px, 6px);
+}
+.toggle .line2 {
+    opacity: 0;
+}
+.toggle .line3 {
+    transform: rotate(-45deg) translate(-5px, -6px);
+}  */
+
+
+/* Header style  */
+header {
+    position: absolute;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 35px 100px 0;
+    animation: 1s fadein 0.5s forwards;
+    opacity: 0;
+    color: #ffffff;
+}
+
+@keyframes fadein {
+    100% {
+        opacity: 1;
+    }
+}
+
+header h2 {
+    font-family: "Quicksand", san-serif;
+}
+
+header nav ul{
+    display: flex;
+    margin-right: -20px;
+}
+header nav li {
+    margin: 0 20px;
+}
+
+@media screen and (max-width:800px) {
+    header {
+        padding: 20px 50px;
+        flex-direction: column;
+    }
+    header h2 {
+        margin-bottom: 15px;
+    }
+}
+
+
+/* section */
+
+
 section {
     display: flex;
     flex-direction: column;
@@ -234,46 +202,7 @@ section p {
         padding: 50px 20px;
     }
 }
-/* Header style  */
-header {
-    position: absolute;
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 35px 100px 0;
-    animation: 1s fadein 0.5s forwards;
-    opacity: 0;
-    color: #ffffff;
-}
 
-@keyframes fadein {
-    100% {
-        opacity: 1;
-    }
-}
-
-header h2 {
-    font-family: "Quicksand", roboto;
-}
-
-header nav {
-    display: flex;
-    margin-right: -15px;
-}
-header nav li {
-    margin: 0 15px;
-}
-
-@media screen and (max-width:800px) {
-    header {
-        padding: 20px 50px;
-        flex-direction: column;
-    }
-    header h2 {
-        margin-bottom: 15px;
-    }
-}
 /* Hero style */
 .hero {
     position: relative;
@@ -383,12 +312,41 @@ header nav li {
     }
 }
 /* Testimonial section  */
+.testimonials {
+    padding: 40px 0;
+    background: #f1f1f1;
+    color: #434343;
+    text-align: center;
+}
 .testimonials .quote {
     font-size: 18px;
     font-weight: 300;
     line-height: 1.5;
     margin: 40px 0 25px;
 }
+
+.row {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+.col {
+    flex: 33.33%;
+    max-width: 33.33%;
+    box-sizing: border-box;
+    padding: 15px;
+}
+.testimonial {
+    background: #D6E0E5;
+    padding: 30px;
+   
+}
+.testimonial img {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+}
+
 
 @media screen and (max-width: 800px){
     .testimonials .quote {
@@ -398,7 +356,20 @@ header nav li {
     .testimonials .author {
         font-size: 14px;
     }
+    .col {
+        flex: 100%;
+        max-width: 80%;
+    }
 }
+
+@media screen and (max-width: 600px) {
+    .col {
+        flex: 100%;
+        max-width: 100%;
+    }
+}
+
+
 /* contact section */
 .contact form {
     display: flex;
@@ -418,7 +389,7 @@ header nav li {
     flex: 1;
 }
 @media screen and (max-width: 1000px) {
-    .contact-form input {
+    .contact form input {
         flex-basis: 100%;
         margin: 0 0 18px 0;
     }
@@ -454,5 +425,19 @@ footer p {
     }
     footer ul li {
         margin: 0 8px;
+    }
+}
+@media screen and (max-width: 768px) {
+    footer {
+        display: flex;
+        align-items: center;
+        justify-content: space-around;
+        background-color: #807d8b;
+        color: #fff;
+        padding: 10px 0;
+    }
+    footer p {
+        text-align: center;
+        margin: 15px;
     }
 }
